# SP_HW23-2_Skripnikov

./: README.md  catalog.json  groups.json  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/: base.html
blog/templates/blog/: post_confirm_delete.html  post_detail.html  post_form.html  post_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  validators.py  views.py
catalog/management/commands/: add_products.py
catalog/migrations/: 0001_initial.py  0002_alter_product_photo.py  0003_alter_product_category_alter_product_description_and_more.py  0004_product_views_count.py  0005_product_owner.py  0006_alter_product_options_product_is_published.py  0007_alter_product_is_published.py  0008_alter_product_is_published.py
catalog/templates/: base.html  home.html  product_detail.html  products_list.html
catalog/templates/catalog/: base.html  contacts.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html  products_by_category.html
catalog/templates/catalog/includes/: inc_menu.html
catalog/templates/includes/: inc_menu.html
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csuser.py
users/migrations/: 0001_initial.py  0002_remove_user_tg_name_user_country_alter_user_email.py  0003_user_token.py
users/templates/: login.html
users/templates/users/: user_form.html
